{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 55,
  "lineage": "4721b9ec-f4e0-36b8-c1a7-18a4b4766fc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "e2e_ml_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498969721544:internet-gateway/igw-09c394b11547905cc",
            "id": "igw-09c394b11547905cc",
            "owner_id": "498969721544",
            "tags": {
              "Name": "e2e-ml-igw"
            },
            "tags_all": {
              "Name": "e2e-ml-igw"
            },
            "vpc_id": "vpc-0d459a31c82d701fc"
          },
          "dependencies": [
            "aws_vpc.e2e_ml_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e2e_ml_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498969721544:route-table/rtb-078492f4346dc2696",
            "id": "rtb-078492f4346dc2696",
            "owner_id": "498969721544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c394b11547905cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e2e-ml-rt"
            },
            "tags_all": {
              "Name": "e2e-ml-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d459a31c82d701fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.e2e_ml_igw",
            "aws_vpc.e2e_ml_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e2e_ml_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f836394f8ae83c5",
            "route_table_id": "rtb-078492f4346dc2696",
            "subnet_id": "subnet-0da4a0258d4595655"
          },
          "dependencies": [
            "aws_internet_gateway.e2e_ml_igw",
            "aws_route_table.e2e_ml_rt",
            "aws_subnet.e2e_ml_subnet",
            "aws_vpc.e2e_ml_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e2e_ml_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498969721544:security-group/sg-07d67f069475dbbbb",
            "description": "Allow traffic for e2e ML service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d67f069475dbbbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "e2e-ml-sg",
            "name_prefix": "",
            "owner_id": "498969721544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "e2e-ml-security-group"
            },
            "tags_all": {
              "Name": "e2e-ml-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d459a31c82d701fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.e2e_ml_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e2e_ml_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498969721544:subnet/subnet-0da4a0258d4595655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da4a0258d4595655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498969721544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e2e-ml-subnet"
            },
            "tags_all": {
              "Name": "e2e-ml-subnet"
            },
            "vpc_id": "vpc-0d459a31c82d701fc"
          },
          "dependencies": [
            "aws_vpc.e2e_ml_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "e2e_ml_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498969721544:vpc/vpc-0d459a31c82d701fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06342949525d1b3e0",
            "default_route_table_id": "rtb-051a555e3b261b81a",
            "default_security_group_id": "sg-07394f761b240868c",
            "dhcp_options_id": "dopt-083f1ac0f715ad449",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d459a31c82d701fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051a555e3b261b81a",
            "owner_id": "498969721544",
            "tags": {
              "Name": "e2e-ml-vpc"
            },
            "tags_all": {
              "Name": "e2e-ml-vpc"
            }
          }
        }
      ]
    }
  ]
}